--- a/_downloads/model1.ipynb
+++ b/_downloads/model1.ipynb
@@ -384,14 +384,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 21,
       "metadata": {
         "id": "hkqS9KZfRKpz",
-        "outputId": "e159b1e5-f766-485d-94e8-2cea60a62ec6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 388
-        }
+        },
+        "collapsed": true,
+        "outputId": "998d5e5e-8e36-4985-9c19-de6242a13a57"
       },
       "outputs": [
         {
@@ -401,7 +402,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-8-d7de998faa25>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0;31m# forward + backward + optimize\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m         \u001b[0moutputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m         \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-21-fe85c778b0e6>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0;31m# forward + backward + optimize\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m         \u001b[0moutputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m         \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_wrapped_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1737\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_compiled_call_impl\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# type: ignore[misc]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1738\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1739\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_call_impl\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1740\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1741\u001b[0m     \u001b[0;31m# torchrec tests the code consistency with the following code\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1748\u001b[0m                 \u001b[0;32mor\u001b[0m \u001b[0m_global_backward_pre_hooks\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0m_global_backward_hooks\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1749\u001b[0m                 or _global_forward_hooks or _global_forward_pre_hooks):\n\u001b[0;32m-> 1750\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mforward_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1751\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1752\u001b[0m         \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m<ipython-input-6-de80d3d50bf8>\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m         \u001b[0mx1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mF\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrelu\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconv1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m         \u001b[0mx2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mF\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrelu\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconv3\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m         \u001b[0mx1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mF\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrelu\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconv2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -413,34 +414,6 @@
           ]
         }
       ],
-      "source": [
-        "for epoch in range(10):  # loop over the dataset multiple times\n",
-        "\n",
-        "    running_loss = 0.0\n",
-        "    for i, data in enumerate(trainloader, 0):\n",
-        "        # get the inputs\n",
-        "        inputs, labels = data\n",
-        "\n",
-        "        # zero the parameter gradients\n",
-        "        optimizer.zero_grad()\n",
-        "\n",
-        "        # forward + backward + optimize\n",
-        "        outputs = net(inputs)\n",
-        "        loss = criterion(outputs, labels)\n",
-        "        loss.backward()\n",
-        "        optimizer.step()\n",
-        "\n",
-        "        # print statistics\n",
-        "        running_loss += loss.item()\n",
-        "        if i % 2000 == 1999:    # print every 2000 mini-batches\n",
-        "            print('[%d, %5d] loss: %.3f' %\n",
-        "                  (epoch + 1, i + 1, running_loss / 2000))\n",
-        "            running_loss = 0.0\n",
-        "\n",
-        "print('Finished Training')"
-      ]
-    },
-    {
       "source": [
         "for epoch in range(10):  # loop over the dataset multiple times\n",
         "\n",
@@ -469,84 +442,6 @@
         "            running_loss = 0.0\n",
         "\n",
         "print('Finished Training')"
-      ],
-      "cell_type": "code",
-      "metadata": {
-        "id": "lQmHfs6u9zRD",
-        "outputId": "f2a5a1ff-fa39-4ea5-9267-3ce9ee0ce24c",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[1,  2000] loss: 2.077\n",
-            "[1,  4000] loss: 1.703\n",
-            "[1,  6000] loss: 1.560\n",
-            "[1,  8000] loss: 1.429\n",
-            "[1, 10000] loss: 1.338\n",
-            "[1, 12000] loss: 1.300\n",
-            "[2,  2000] loss: 1.196\n",
-            "[2,  4000] loss: 1.135\n",
-            "[2,  6000] loss: 1.087\n",
-            "[2,  8000] loss: 1.025\n",
-            "[2, 10000] loss: 1.001\n",
-            "[2, 12000] loss: 0.964\n",
-            "[3,  2000] loss: 0.863\n",
-            "[3,  4000] loss: 0.858\n",
-            "[3,  6000] loss: 0.823\n",
-            "[3,  8000] loss: 0.820\n",
-            "[3, 10000] loss: 0.809\n",
-            "[3, 12000] loss: 0.777\n",
-            "[4,  2000] loss: 0.643\n",
-            "[4,  4000] loss: 0.659\n",
-            "[4,  6000] loss: 0.673\n",
-            "[4,  8000] loss: 0.657\n",
-            "[4, 10000] loss: 0.673\n",
-            "[4, 12000] loss: 0.651\n",
-            "[5,  2000] loss: 0.480\n",
-            "[5,  4000] loss: 0.513\n",
-            "[5,  6000] loss: 0.522\n",
-            "[5,  8000] loss: 0.531\n",
-            "[5, 10000] loss: 0.525\n",
-            "[5, 12000] loss: 0.538\n",
-            "[6,  2000] loss: 0.335\n",
-            "[6,  4000] loss: 0.367\n",
-            "[6,  6000] loss: 0.377\n",
-            "[6,  8000] loss: 0.402\n",
-            "[6, 10000] loss: 0.410\n",
-            "[6, 12000] loss: 0.421\n",
-            "[7,  2000] loss: 0.209\n",
-            "[7,  4000] loss: 0.274\n",
-            "[7,  6000] loss: 0.279\n",
-            "[7,  8000] loss: 0.300\n",
-            "[7, 10000] loss: 0.329\n",
-            "[7, 12000] loss: 0.323\n",
-            "[8,  2000] loss: 0.159\n",
-            "[8,  4000] loss: 0.190\n",
-            "[8,  6000] loss: 0.214\n",
-            "[8,  8000] loss: 0.227\n",
-            "[8, 10000] loss: 0.260\n",
-            "[8, 12000] loss: 0.246\n",
-            "[9,  2000] loss: 0.133\n",
-            "[9,  4000] loss: 0.172\n",
-            "[9,  6000] loss: 0.165\n",
-            "[9,  8000] loss: 0.181\n",
-            "[9, 10000] loss: 0.195\n",
-            "[9, 12000] loss: 0.221\n",
-            "[10,  2000] loss: 0.107\n",
-            "[10,  4000] loss: 0.139\n",
-            "[10,  6000] loss: 0.145\n",
-            "[10,  8000] loss: 0.163\n",
-            "[10, 10000] loss: 0.163\n",
-            "[10, 12000] loss: 0.168\n",
-            "Finished Training\n"
-          ]
-        }
       ]
     },
     {
@@ -574,11 +469,11 @@
       "execution_count": 10,
       "metadata": {
         "id": "fDu8CQC1RKpz",
-        "outputId": "6d895007-c6aa-4eee-8c60-3dc7e741a300",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 211
-        }
+        },
+        "outputId": "6d895007-c6aa-4eee-8c60-3dc7e741a300"
       },
       "outputs": [
         {
@@ -648,10 +543,10 @@
       "execution_count": 13,
       "metadata": {
         "id": "T3CP2c1ZRKpz",
-        "outputId": "71b9702b-2f4f-46ba-8988-42191fb2aaa6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "71b9702b-2f4f-46ba-8988-42191fb2aaa6"
       },
       "outputs": [
         {
@@ -686,10 +581,10 @@
       "execution_count": 16,
       "metadata": {
         "id": "Rr4Mmz2MRKp0",
-        "outputId": "81c0f35a-ebb2-4d6b-9053-a99a80978e81",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "81c0f35a-ebb2-4d6b-9053-a99a80978e81"
       },
       "outputs": [
         {
@@ -737,10 +632,10 @@
       "execution_count": 18,
       "metadata": {
         "id": "VNO18nG7RKp0",
-        "outputId": "c6ebc236-72e0-46db-a00b-a151329a365f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c6ebc236-72e0-46db-a00b-a151329a365f"
       },
       "outputs": [
         {
